--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="A">
+		<div id="a">1</div>
+		<div id="b">2</div>
+		<div id="c">3</div>
+	</div>
+	<div class="B">
+		<div class="a">1</div>
+		<div class="b">2</div>
+		<div class="c">3</div>
+		<div class="c">4</div>
+		<div class="c">5</div>
+		<div class="c">6</div>
+		<div class="c">7</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
