--- a/main.html
+++ b/main.html
@@ -8,12 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="A">
+	<div class="holder">
 		<div id="a">1</div>
 		<div id="b">2</div>
 		<div id="c">3</div>
 	</div>
-	<div class="B">
+	<div class="item">
 		<div class="a">1</div>
 		<div class="b">2</div>
 		<div class="c">3</div>
