--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="A">
+	<div class="holder">
 		<div id="a">1</div>
 		<div id="b">2</div>
 		<div id="c">3</div>
